[FE] Fix navbar z-index

--- a/PortfolioFE/PortfolioFE/src/app/shared/components/card-holder/card-holder.component.scss
+++ b/PortfolioFE/PortfolioFE/src/app/shared/components/card-holder/card-holder.component.scss
@@ -1,7 +1,7 @@
 .example-card {
     width: 200px;
     height: 30px;
-
+    z-index: 1;
 }
 
 .text {
